# population_mesh_jp

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
.github/workflows/: pythonpackage.yml
conf/: run_settings.ini
population_mesh_jp/: __init__.py  runner.py
population_mesh_jp/data/: download_json.py  format_data.py  map_id_converter.py  prefec_edges.csv
population_mesh_jp/model/: sample.py
population_mesh_jp/utils/: task_template.py
script/: run_download.py
test/unit_test/: test_sample.py
test/unit_test/data/: test_convert_prefecture_to_map_id.py  test_download_json.py  test_format_data.py
