[tool.poetry]
name = "population_mesh_jp"
version = "0.1.0"
description = ""
authors = ["mski_iksm <9000000000000000091e@gmail.com>"]

[tool.poetry.dependencies]
python = "==3.6.4"
pandas = "^1.0.5"
gokart = "^0.3.14"
isort = "^5.1.1"
pytest = "^5.4.3"

[tool.poetry.dev-dependencies]
yapf = "^0.30.0"
autopep8 = "^1.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
